--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Era Ebhodaghe Porfolio<br />
-						</h1>
+						<h1>Era Ebhodaghe Porfolio<br /></h1>
+						<h2>About<br /></h2>
 						<p>Data Scientist skilled in Statistical analysis and predictive modeling, Machine learning (supervised and unsupervised algorithms), Data cleaning, transformation, and visualization (pandas, NumPy, Matplotlib, Tableau/Power BI), Big data processing (Spark, Hadoop, SQL), Python and SQL programming.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -156,6 +156,18 @@
 									<p>Conducted exploratory data analysis on information gathered from APIs, web pages, and CSV files to uncover insights about park locations, visitor trends, and amenities across the United States.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/era-ebhodaghe/Data-Science-Portfolio/tree/main/US%20National%20Parks" class="button">View Project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										
+										<h2><a href="https://github.com/era-ebhodaghe/Data-Science-Portfolio/tree/main/Diamond%20Price%20Prediction">Diamond Price Prediction<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/era-ebhodaghe/Data-Science-Portfolio/tree/main/Diamond%20Price%20Prediction" class="image fit"><img src="images/Diamond Price Prediction.jpg" alt="" /></a>
+									<p>A data science project that uses machine learning to estimate diamond prices based on attributes such as carat, cut, clarity, and color. It demonstrates skills in data cleaning, feature engineering, exploratory analysis, and model building for real-world pricing predictions.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/era-ebhodaghe/Data-Science-Portfolio/tree/main/Diamond%20Price%20Prediction" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
